--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-lg
-  a.navbar-brand(href="/")
+  a.navbar-brand(href="./")
     img.mr-2(src="./dist/images/logo/logo-white.svg")
     span.navbar-title Chameleon
 
@@ -12,31 +12,31 @@ nav.navbar.navbar-expand-lg
     ul.navbar-nav.mr-auto
 
       li.nav-item
-        a.nav-link(href="/get-started.html")
+        a.nav-link(href="./get-started.html")
           svg.icon
             use(xlink:href="#rocket-2-line")
           | &nbsp;Get Started
 
       li.nav-item
-        a.nav-link(href="/elements.html")
+        a.nav-link(href="./elements.html")
           svg.icon
             use(xlink:href="#stack-line")
           | &nbsp;Elements
 
       li.nav-item
-        a.nav-link(href="/layouts.html")
+        a.nav-link(href="./layouts.html")
           svg.icon
             use(xlink:href="#layout-line")
           | &nbsp;Layouts
 
       li.nav-item
-        a.nav-link(href="/components.html")
+        a.nav-link(href="./components.html")
           svg.icon
             use(xlink:href="#dashboard-line")
           | &nbsp;Components
 
       li.nav-item
-        a.nav-link(href="/changelog.html")
+        a.nav-link(href="./changelog.html")
           svg.icon
             use(xlink:href="#clipboard-line")
           | &nbsp;Changelog
