--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -1,18 +1,14 @@
-- var title = 'Chameleon'
-- var subtitle = 'web theme for openSUSE'
-
-block variables
-
 doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    title= title + ' - ' + subtitle
+    title Chameleon - openSUSE Design System for Web
     link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
     link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
     link(href="./lib/github.css", rel="stylesheet")
+    link(href="./lib/doc.css", rel="stylesheet")
 
   body.d-flex.flex-column(style="min-height:100vh;")
 
@@ -26,3 +22,4 @@ html(lang="en")
     script(src="./dist/js/chameleon.js")
     script(src="./lib/highlight.js")
     script hljs.initHighlightingOnLoad();
+    script(src="./lib/doc.js")
