--- a/src/pug/sections/icons.pug
+++ b/src/pug/sections/icons.pug
@@ -1,8 +1,25 @@
+mixin icon(name)
+  .col-6.col-sm-4.col-md-3.col-lg-2.text-center
+    svg.icon.icon-2x
+      use(xlink:href="#" + name)
+    p= name
+
+
 h2#icons Icons
 
-h3#navbar-icons Navbar Icons
+pre
+  | &lt;svg class="icon"&gt;
+  |   &lt;use xlink:href="#leap"&gt;
+  | &lt;/svg&gt;
 
-p.navbar(style="border:0;padding:0;font-size:2.5rem;")
-  span.navbar-toggler-icon
-  span.navbar-toggler-icon.darkmode-toggler-icon
-  span.navbar-toggler-icon.megamenu-toggler-icon
+.row
+  +icon("opensuse")
+  +icon("opensuse-button")
+  +icon("leap")
+  +icon("tumbleweed")
+
+p
+  | More icons can be found at
+  |
+  a(href="https://remixicon.com") RemixIcon.com
+  |.
