--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -1,6 +1,7 @@
 nav.navbar.navbar-expand-lg
   a.navbar-brand(href="./")
-    img.mr-2(src="./dist/images/logo/logo-white.svg")
+    svg.icon.icon-2x.mr-2
+      use(xlink:href="#opensuse")
     span.navbar-title Chameleon
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
