--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -14,8 +14,8 @@ html(lang="en")
 
     include ../components/navbar.pug
 
-    .container.flex-fill.py-5
-      block content
+    .flex-fill.py-5
+      block main
 
     include ../components/footer.pug
 
