--- a/src/pug/pages/components.pug
+++ b/src/pug/pages/components.pug
@@ -1,22 +1,11 @@
-extends ../layouts/main.pug
+extends ../layouts/doc.pug
 
 block content
-
   h1 Components
+  include ../sections/alerts.pug
+  include ../sections/buttons.pug
+  include ../sections/cards.pug
+  include ../sections/inputs.pug
+  include ../sections/lists.pug
+  include ../sections/modals.pug
 
-  .row
-    .col-lg-9#toc-scope
-      include ../sections/alerts.pug
-      include ../sections/buttons.pug
-      include ../sections/cards.pug
-      include ../sections/inputs.pug
-      include ../sections/lists.pug
-      include ../sections/modals.pug
-
-    #toc-sidebar.toc-sidebar.col-lg-3.d-none.d-lg-block
-      #toc.toc
-        ol
-          li foo
-          li bar
-          li foo
-          li bar
