--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../layouts/main.pug
 
-block content
-  .text-center
+block main
+  .container.text-center
     h1.display-4 CHAMELEON
     p.lead openSUSE Design System for Web
     hr.my-4
