--- a/src/pug/sections/buttons.pug
+++ b/src/pug/sections/buttons.pug
@@ -6,6 +6,8 @@ p
 
 p Only the following color variants are recommended:
 
+h3#buttons-filled Filled
+
 .my-3
   button.btn.btn-primary Primary
   |
@@ -17,3 +19,5 @@ p Only the following color variants are recommended:
   |
   |
   button.btn.btn-link Link
+
+h3#buttons-bordered Bordered
