--- a/src/pug/sections/cards.pug
+++ b/src/pug/sections/cards.pug
@@ -5,20 +5,20 @@ h2#cards Cards
     .card
       img.card-img-top(src="dist/images/logo/leap-green.png")
       .card-body
-        h5.card-title Card title
+        h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         a.btn.btn-primary(href="#") Go somewhere
   .col-md-4
     .card
       img.card-img-top(src="dist/images/logo/logo-gray.png")
       .card-body
-        h5.card-title Card title
+        h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         a.btn.btn-primary(href="#") Go somewhere
   .col-md-4
     .card
       img.card-img-top(src="dist/images/logo/tumbleweed-green.png")
       .card-body
-        h5.card-title Card title
+        h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         a.btn.btn-primary(href="#") Go somewhere
