--- a/src/sass/wiki/_toc.scss
+++ b/src/sass/wiki/_toc.scss
@@ -1,65 +1,29 @@
 /* Table of content */
 
 #bodyContent #toc {
-	display: none;
+  display: none;
 }
 
 #toc-sidebar {
   padding: 4rem 0;
 }
 
-#toc {
-	position: sticky;
-	top: 0;
-	font-size: $font-size-sm;
-	max-height: 100vh;
-
-	a {
-		color: inherit;
-		opacity: 0.5;
-	}
-
-	a:hover {
-		opacity: 1;
-	}
-
-	ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-
-		ul {
-			padding-left: 1rem;
-		}
-
-		> li {
-			margin-bottom: 0.25em;
-
-			> ul {
-				margin-top: 0.25em;
-			}
-
-			&.toclevel-1 {
-				margin-bottom: 0.5em;
-
-				> ul {
-					margin-top: 0.5em;
-				}
-			}
-
-			> a {
-				display: flex;
-			}
-		}
-	}
+.toc {
+  ul {
+    li {
+      a {
+        display: flex;
+      }
+    }
+  }
 }
 
 #toctitle {
-	display: none;
+  display: none;
 }
 
 .tocnumber {
-	display: inline-block;
+  display: inline-block;
   margin-right: 0.5em;
   white-space: nowrap;
 }
