alerts and breadcrumbs dark mode

--- a/src/pug/pages/components.pug
+++ b/src/pug/pages/components.pug
@@ -2,8 +2,8 @@ extends ../layouts/doc.pug
 
 block content
   h1 Components
-  include ../sections/alerts.pug
-  include:markdown-it(html) ../../../docs/breadcrumb.md
+  include:markdown-it(html) ../../../docs/alerts.md
+  include:markdown-it(html) ../../../docs/breadcrumbs.md
   include ../sections/buttons.pug
   include ../sections/cards.pug
   include ../sections/inputs.pug
