--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -85,6 +85,9 @@ $headings-margin-bottom: 1rem;
 $headings-font-family: $font-family-sans-serif;
 $headings-font-weight: 400;
 
+// Alerts
+$alert-link-font-weight: 400;
+
 // Navbar
 $navbar-toggler-padding-y: 0.25rem;
 $navbar-toggler-padding-x: 0.25rem;
