simplify opensuse icon, don't insert duplicate megamenu icon

--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -47,3 +47,7 @@ nav.navbar.navbar-expand-lg
           svg.icon
             use(xlink:href="#github-line")
           | &nbsp;Source Code
+
+  button.navbar-toggler.megamenu-toggler(type="button")
+    svg.icon
+      use(xlink:href="#apps-line")
