footer dark color

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,2 +1,2 @@
-footer#theme-doc-footer.text-center.py-5.bg-dark.text-light
+footer.footer
   .container &copy; 2017-#{new Date().getFullYear()} openSUSE Contributors
