--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,2 +1,2 @@
 footer.footer
-  .container &copy; 2017-#{new Date().getFullYear()} openSUSE contributors
+  .container &copy; 2017&ndash;#{new Date().getFullYear()} openSUSE contributors
