--- a/src/sass/_alert.scss
+++ b/src/sass/_alert.scss
@@ -21,4 +21,13 @@
     border-color: $danger;
     background-color: transparentize($danger, 0.8);
   }
+
+  > p,
+  > ol,
+  > ul,
+  > pre {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
