wiki: icon colors

--- a/src/sass/wiki/_anchor.scss
+++ b/src/sass/wiki/_anchor.scss
@@ -4,4 +4,9 @@
   margin-left: 0.5rem !important;
   font-size: inherit !important;
   line-height: inherit !important;
+
+  a {
+    color: inherit;
+    opacity: 0.5;
+  }
 }
