--- a/src/sass/wiki/_edit-section.scss
+++ b/src/sass/wiki/_edit-section.scss
@@ -5,6 +5,11 @@
   margin-left: 0.5rem !important;
   font-size: inherit !important;
   line-height: inherit !important;
+
+  a {
+    color: inherit;
+    opacity: 0.5;
+  }
 }
 
 .mw-editsection-bracket {
