wiki: fix anchor style

--- a/src/sass/wiki/_anchor.scss
+++ b/src/sass/wiki/_anchor.scss
@@ -1,6 +1,6 @@
 // See also src/js/wiki/anchor.js
 
-.mw-editsection {
+.mw-anchor {
   margin-left: 0.5rem !important;
   font-size: inherit !important;
   line-height: inherit !important;
