wiki: split css build

--- a/src/pug/pages/components.pug
+++ b/src/pug/pages/components.pug
@@ -6,6 +6,7 @@ block content
   include:markdown-it(html) ../../../docs/breadcrumbs.md
   include ../sections/buttons.pug
   include ../sections/cards.pug
+  include:markdown-it(html) ../../../docs/dropdowns.md
   include:markdown-it(html) ../../../docs/footer.md
   include ../sections/inputs.pug
   include ../sections/lists.pug
