--- a/src/sass/_code.scss
+++ b/src/sass/_code.scss
@@ -1,4 +1,10 @@
 pre {
-	padding: $spacer;
+  padding: $spacer;
   background: $light;
+}
+
+// When you don't want to escape wiki code inside <pre>, you can use
+// <div class="pre"></div> instead.
+.pre {
+  @extend pre;
 }
