wiki: don't use scope for separate css build

--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -22,4 +22,6 @@
 
 // Site specific styles
 // TODO: move to separate CSS file
-@import "wiki/index";
+body.mediawiki {
+  @import "chameleon-wiki";
+}
