--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,5 +1,4 @@
 .navbar {
-  $image-height: 32px;
   justify-content: initial;
   border-bottom: 2px solid $green;
   background: $body-bg !important;
@@ -49,11 +48,12 @@
     }
   }
 
+  // mainly for avatars and logos
   img {
-    height: $image-height;
+    height: 2rem;
     width: auto;
-    margin-top: -$navbar-padding-y;
-    margin-bottom: -$navbar-padding-y;
+    margin-top: -0.7rem;
+    margin-bottom: -0.5rem;
   }
 
   .navbar-brand {
