js: don't bundle jquery and bootstrap scripts

--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -19,7 +19,8 @@ html(lang="en")
 
     include ../components/footer.pug
 
+    script(src="./dist/js/jquery.slim.js")
+    script(src="./dist/js/bootstrap.bundle.js")
     script(src="./dist/js/chameleon.js")
     script(src="./lib/highlight.js")
-    script hljs.initHighlightingOnLoad();
     script(src="./lib/doc.js")
