icon: optimize build

--- a/docs/pug/components/navbar.pug
+++ b/docs/pug/components/navbar.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
     svg.icon
-      use(xlink:href="#menu-2-line")
+      use(xlink:href="#menu-2")
 
   #navbar-collapse.collapse.navbar-collapse
 
@@ -15,39 +15,39 @@ nav.navbar.navbar-expand-lg
       li.nav-item
         a.nav-link(href="./get-started.html")
           svg.icon
-            use(xlink:href="#rocket-2-line")
+            use(xlink:href="#rocket-2")
           | &nbsp;Get Started
 
       li.nav-item
         a.nav-link(href="./elements.html")
           svg.icon
-            use(xlink:href="#stack-line")
+            use(xlink:href="#stack")
           | &nbsp;Elements
 
       li.nav-item
         a.nav-link(href="./layouts.html")
           svg.icon
-            use(xlink:href="#layout-line")
+            use(xlink:href="#layout")
           | &nbsp;Layouts
 
       li.nav-item
         a.nav-link(href="./components.html")
           svg.icon
-            use(xlink:href="#dashboard-line")
+            use(xlink:href="#dashboard")
           | &nbsp;Components
 
       li.nav-item
         a.nav-link(href="./changelog.html")
           svg.icon
-            use(xlink:href="#clipboard-line")
+            use(xlink:href="#clipboard")
           | &nbsp;Changelog
 
       li.nav-item
         a.nav-link(href="https://github.com/openSUSE/chameleon")
           svg.icon
-            use(xlink:href="#github-line")
+            use(xlink:href="#github")
           | &nbsp;Source Code
 
   button.navbar-toggler.megamenu-toggler(type="button")
     svg.icon
-      use(xlink:href="#apps-line")
+      use(xlink:href="#apps")
