--- a/docs/pug/pages/index.pug
+++ b/docs/pug/pages/index.pug
@@ -9,32 +9,32 @@ block main
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#stack-line")
+            use(xlink:href="#stack")
         p Bootstrap 4 &amp; Remix Icon
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#html5-line")
+            use(xlink:href="#html5")
         p Powered by HTML5 &amp; CSS3
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#pencil-ruler-line")
+            use(xlink:href="#pencil-ruler")
         p openSUSE Branding Guidelines
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#e-bike-2-line")
+            use(xlink:href="#e-bike-2")
         p Super Fast &amp; Light Weight
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#device-line")
+            use(xlink:href="#device")
         p Responsive &amp; Cross-Platform
       .col-sm-6.col-md-4.py-3
         p
           svg.icon.icon-2x
-            use(xlink:href="#contrast-2-line")
+            use(xlink:href="#contrast-2")
         p Light &amp; Dark Mode Switch
     hr.my-4
     p
