--- a/docs/pug/sections/icons.pug
+++ b/docs/pug/sections/icons.pug
@@ -36,5 +36,5 @@ pre
 pre
   code.language-html
     | &lt;svg class="icon"&gt;
-    |   &lt;use xlink:href="#home-line"&gt;
+    |   &lt;use xlink:href="#home"&gt;
     | &lt;/svg&gt;
