css: fix table colors in dark mode

--- a/docs/pug/pages/components.pug
+++ b/docs/pug/pages/components.pug
@@ -11,4 +11,4 @@ block content
   include ../sections/inputs.pug
   include ../sections/lists.pug
   include ../sections/modals.pug
-
+  include:markdown-it(html) ../../../docs/tables.md
