--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -11,6 +11,7 @@
 @import "code";
 @import "navbar";
 @import "footer";
+@import "table";
 
 // Additional styles, not from Bootstrap
 @import "icons";
