--- a/src/sass/dark-mode/_variables.scss
+++ b/src/sass/dark-mode/_variables.scss
@@ -3,3 +3,6 @@ $dark-mode-text-color: $gray-500;
 $dark-mode-secondary: $gray-800;
 $dark-mode-bg-color: $gray-900;
 $dark-mode-border-color: $gray-700;
+
+// Table
+$dark-mode-table-border-color: $gray-600;
