new navbar style

--- a/src/sass/_code.scss
+++ b/src/sass/_code.scss
@@ -1,6 +1,6 @@
 pre {
   padding: $spacer;
-  background: $light;
+  background: $gray-200;
 }
 
 // When you don't want to escape wiki code inside <pre>, you can use
