--- a/src/sass/dark-mode/_navbar.scss
+++ b/src/sass/dark-mode/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background: $dark-mode-body-bg-color !important;
+  background: $dark !important;
 
   .navbar-brand {
     color: $navbar-dark-brand-color;
