--- a/docs/pug/components/navbar.pug
+++ b/docs/pug/components/navbar.pug
@@ -1,54 +1,35 @@
-nav.navbar.navbar-expand-lg
+nav.navbar.navbar-expand-lg.sticky-top
   a.navbar-brand(href="./")
-    svg.icon.icon-2x.mr-2
-      use(xlink:href="#opensuse")
-    span.navbar-title Chameleon
+    <img src="/favicon.svg" width="30" height="30" class="d-inline-block align-top" alt="openSUSE Logo" title="openSUSE">
+    |
+    | Chameleon
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
-    svg.icon
-      use(xlink:href="#menu-2")
+    svg(width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg")
+      path(fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z")
 
   #navbar-collapse.collapse.navbar-collapse
 
     ul.navbar-nav.mr-auto
 
       li.nav-item
-        a.nav-link(href="./get-started.html")
-          svg.icon
-            use(xlink:href="#rocket-2")
-          | &nbsp;Get Started
+        a.nav-link(href="./get-started.html") Get Started
 
       li.nav-item
-        a.nav-link(href="./elements.html")
-          svg.icon
-            use(xlink:href="#stack")
-          | &nbsp;Elements
+        a.nav-link(href="./elements.html") Elements
 
       li.nav-item
-        a.nav-link(href="./layouts.html")
-          svg.icon
-            use(xlink:href="#layout")
-          | &nbsp;Layouts
+        a.nav-link(href="./layouts.html") Layouts
 
       li.nav-item
-        a.nav-link(href="./components.html")
-          svg.icon
-            use(xlink:href="#dashboard")
-          | &nbsp;Components
+        a.nav-link(href="./components.html") Components
 
       li.nav-item
-        a.nav-link(href="./changelog.html")
-          svg.icon
-            use(xlink:href="#clipboard")
-          | &nbsp;Changelog
+        a.nav-link(href="./changelog.html") Changelog
 
       li.nav-item
-        a.nav-link(href="https://github.com/openSUSE/chameleon")
-          svg.icon
-            use(xlink:href="#github")
-          | &nbsp;Source Code
+        a.nav-link(href="https://github.com/openSUSE/chameleon") Source Code
 
   button.navbar-toggler.megamenu-toggler(type="button")
-    <svg class="bi bi-grid-3x3-gap" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M4 2H2v2h2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zM9 2H7v2h2V2zm5 0h-2v2h2V2zM4 7H2v2h2V7zm5 0H7v2h2V7zm5 0h-2v2h2V7zM4 12H2v2h2v-2zm5 0H7v2h2v-2zm5 0h-2v2h2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2z"/>
-    </svg>
+    svg(width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg")
+      path(fill-rule="evenodd" d="M4 2H2v2h2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zM9 2H7v2h2V2zm5 0h-2v2h2V2zM4 7H2v2h2V7zm5 0H7v2h2V7zm5 0h-2v2h2V7zM4 12H2v2h2v-2zm5 0H7v2h2v-2zm5 0h-2v2h2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2z")
