--- a/src/sass/_megamenu.scss
+++ b/src/sass/_megamenu.scss
@@ -1,37 +1,41 @@
 .megamenu {
-  display: flex;
   position: fixed;
   left: 0;
   right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: inherit;
-  flex-direction: column;
-  z-index: $zindex-modal;
+  top: 3.5em;
+  margin-top: 1px;
+  max-height: calc(100vh - 3.5em);
+  overflow: auto;
+  background-color: $teal;
+  color: $light;
+  z-index: $zindex-dropdown;
 }
 
-.megamenu-header {
-  display: flex;
-  padding: 0 1rem;
+.megamenu .container-fluid {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .megamenu-title {
-  margin: 0.5rem 0;
+  text-align: center;
+  margin-bottom: 0;
 }
 
-.megamenu-close {
-  background: transparent;
-  color: inherit;
-  border: 0;
+.megamenu-heading {
+  text-transform: uppercase;
+  font-size: $font-size-small;
+  font-weight: 600;
+  margin-top: $spacer;
+  margin-bottom: 0;
 }
 
-.megamenu-content {
-  flex: 1 1 auto;
-  padding: 1rem 0;
-  overflow: auto;
-}
-
-.megamenu-list {
+.megamenu ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+}
+
+.megamenu a {
+  color: inherit;
+  text-decoration: none;
 }
