--- a/docs/pug/components/navbar.pug
+++ b/docs/pug/components/navbar.pug
@@ -13,13 +13,10 @@ nav.navbar.navbar-expand-lg.sticky-top
     ul.navbar-nav.mr-auto
 
       li.nav-item
-        a.nav-link(href="./get-started.html") Get Started
+        a.nav-link(href="./") Home
 
       li.nav-item
         a.nav-link(href="./elements.html") Elements
-
-      li.nav-item
-        a.nav-link(href="./layouts.html") Layouts
 
       li.nav-item
         a.nav-link(href="./components.html") Components
