--- a/docs/pug/components/navbar.pug
+++ b/docs/pug/components/navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.sticky-top
   a.navbar-brand(href="./")
-    <img src="/favicon.svg" width="30" height="30" class="d-inline-block align-top" alt="openSUSE Logo" title="openSUSE">
+    <img src="https://static.opensuse.org/favicon.svg" width="30" height="30" class="d-inline-block align-top" alt="Logo" title="openSUSE">
     |
     | Chameleon
 
@@ -25,7 +25,7 @@ nav.navbar.navbar-expand-lg.sticky-top
         a.nav-link(href="./changelog.html") Changelog
 
       li.nav-item
-        a.nav-link(href="https://github.com/openSUSE/chameleon") Source Code
+        a.nav-link(href="https://github.com/openSUSE/chameleon") GitHub
 
   button.navbar-toggler.megamenu-toggler(type="button" data-toggle="collapse" data-target="#megamenu")
     svg(width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg")
