--- a/docs/pug/layouts/main.pug
+++ b/docs/pug/layouts/main.pug
@@ -4,11 +4,15 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     title Chameleon - openSUSE Design System for Web
-    link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
-    link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
+    link(href="https://static.opensuse.org/favicon-32.png", rel="icon", sizes="32x32" type="image/png")
+    link(href="https://static.opensuse.org/favicon-48.png", rel="icon", sizes="48x48" type="image/png")
+    link(href="https://static.opensuse.org/favicon-64.png", rel="icon", sizes="64x64" type="image/png")
+    link(href="https://static.opensuse.org/favicon-96.png", rel="icon", sizes="96x96" type="image/png")
+    link(href="https://static.opensuse.org/favicon-144.png", rel="icon", sizes="144x144" type="image/png")
+    link(href="https://static.opensuse.org/favicon-192.png", rel="icon", sizes="192x192" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
-    link(href="./lib/github.css", rel="stylesheet")
-    link(href="./lib/doc.css", rel="stylesheet")
+    link(href="./docs/css/github.css", rel="stylesheet")
+    link(href="./docs/css/doc.css", rel="stylesheet")
 
   body.d-flex.flex-column(style="min-height:100vh;")
 
@@ -22,5 +26,5 @@ html(lang="en")
     script(src="./dist/js/jquery.slim.js")
     script(src="./dist/js/bootstrap.bundle.js")
     script(src="./dist/js/chameleon.js")
-    script(src="./lib/highlight.js")
-    script(src="./lib/doc.js")
+    script(src="./docs/js/highlight.js")
+    script(src="./docs/js/doc.js")
