change $light color value and navbar button style

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -33,7 +33,7 @@ $orange: #fe7f2d;
 // These names are not in Bootstrap color lists
 $colors: (
   "turquoise": $turquoise,
-  "teal": $teal
+  "teal": $teal,
 );
 
 // Bootstrap colors
@@ -43,7 +43,7 @@ $success: $green;
 $info: $blue;
 $warning: $yellow;
 $danger: $red;
-$light: $gray-100;
+$light: $gray-200;
 $dark: $gray-800;
 
 // Body background
