--- a/src/sass/dark-mode/_navbar.scss
+++ b/src/sass/dark-mode/_navbar.scss
@@ -48,5 +48,10 @@
 
   .btn-secondary {
     background-color: $gray-900;
+    color: $navbar-dark-color;
+
+    @include hover-focus {
+      color: $navbar-dark-hover-color;
+    }
   }
 }
