update wiki heading icon

--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -14,7 +14,7 @@
 @import "table";
 
 // Additional styles, not from Bootstrap
-@import "icons";
+@import "body";
 @import "megamenu";
 @import "toc";
 
