icon alignment and logo space

--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -6,6 +6,7 @@
 @import "alert";
 @import "button-input-fonts";
 @import "card";
+@import "icon";
 @import "selection-color";
 @import "carousel";
 @import "code";
