--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -4,6 +4,11 @@
 
   .navbar-brand {
     color: $navbar-light-brand-color;
+    display: inline-flex;
+
+    img {
+      margin-right: $spacer/2;
+    }
 
     @include hover-focus {
       color: $navbar-light-brand-hover-color;
