--- a/src/sass/wiki/_header.scss
+++ b/src/sass/wiki/_header.scss
@@ -1,9 +1,10 @@
 #mw-head {
-	#actions {
-		margin-top: 1rem;
+  #actions {
+    margin-top: 1rem;
 
-		@media screen and (min-width: 600px) {
-			margin-top: -2.5rem;
-		}
-	}
+    @media screen and (min-width: 600px) {
+      margin-top: -2.5rem;
+      margin-bottom: 2rem;
+    }
+  }
 }
