--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -92,3 +92,8 @@
     margin-top: $navbar-padding-y;
   }
 }
+
+.navbar-transparent {
+  background-color: transparent !important;
+  border: 0 !important;
+}
