--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -78,6 +78,11 @@
     margin-top: -0.3em;
     margin-bottom: -0.2em;
   }
+
+  .dropdown-menu {
+    max-height: calc(100vh - 3.3em);
+    overflow: auto;
+  }
 }
 
 .navbar-toggler {
