--- a/docs/pug/layouts/main.pug
+++ b/docs/pug/layouts/main.pug
@@ -11,7 +11,6 @@ html(lang="en")
     link(href="https://static.opensuse.org/favicon-144.png", rel="icon", sizes="144x144" type="image/png")
     link(href="https://static.opensuse.org/favicon-192.png", rel="icon", sizes="192x192" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
-    link(href="./docs/css/github.css", rel="stylesheet")
     link(href="./docs/css/doc.css", rel="stylesheet")
 
   body.d-flex.flex-column(style="min-height:100vh;")
@@ -26,5 +25,5 @@ html(lang="en")
     script(src="./dist/js/jquery.slim.js")
     script(src="./dist/js/bootstrap.bundle.js")
     script(src="./dist/js/chameleon.js")
-    script(src="./docs/js/highlight.js")
+    script(src="./dist/js/highlight.js")
     script(src="./docs/js/doc.js")
