--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -1,6 +1,6 @@
 // Customized Bootstrap
 @import "variables";
-@import "bootstrap/scss/bootstrap";
+@import "bootstrap";
 
 @import "animate";
 @import "alert";
