--- a/docs/pug/sections/cards.pug
+++ b/docs/pug/sections/cards.pug
@@ -3,21 +3,21 @@ h2#cards Cards
 .row
   .col-md-4
     .card
-      img.card-img-top(src="dist/images/logo/leap-green.png")
+      img.card-img-top(src="https://source.unsplash.com/600x450")
       .card-body
         h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         a.btn.btn-primary(href="#") Go somewhere
   .col-md-4
     .card
-      img.card-img-top(src="dist/images/logo/logo-gray.png")
+      img.card-img-top(src="https://source.unsplash.com/600x450")
       .card-body
         h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         a.btn.btn-primary(href="#") Go somewhere
   .col-md-4
     .card
-      img.card-img-top(src="dist/images/logo/tumbleweed-green.png")
+      img.card-img-top(src="https://source.unsplash.com/600x450")
       .card-body
         h5.card-title.no-toc Card title
         p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.</p>
