--- a/src/sass/dark-mode/_variables.scss
+++ b/src/sass/dark-mode/_variables.scss
@@ -1,7 +1,7 @@
 $dark-mode-body-bg-color: $gray-900;
 $dark-mode-text-color: $gray-500;
 $dark-mode-secondary: $gray-800;
-$dark-mode-bg-color: $black;
+$dark-mode-bg-color: $dark;
 $dark-mode-border-color: $gray-700;
 
 // Table
