make dark theme color softer

--- a/assets/stylesheets/_code.scss
+++ b/assets/stylesheets/_code.scss
@@ -1,6 +1,7 @@
 pre {
   padding: $spacer;
   background: $gray-200;
+  border-radius: $border-radius;
 }
 
 // When you don't want to escape wiki code inside <pre>, you can use
