--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -26,9 +26,9 @@ $turquoise: #35b9ab;
 
 // Secondary colors
 $blue: #21a4df;
-$yellow: #ffc107;
-$red: #dc3545;
-$orange: #fe7f2d;
+$yellow: #bb9d43;
+$red: #a55860;
+$orange: #b96a35;
 
 // These names are not in Bootstrap color lists
 $colors: (
