--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -53,6 +53,10 @@ $body-color: $black;
 // Links
 $link-color: $blue;
 
+// Scrollbars
+$scrollbar-color: transparent;
+$scrollbar-thumb-color: rgba(0, 0, 0, 0.2);
+
 // Options
 
 $enable-caret: true;
