--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -12,6 +12,7 @@
 @import "code";
 @import "navbar";
 @import "footer";
+@import "scrollbar";
 @import "table";
 
 // Additional styles, not from Bootstrap
