--- a/src/sass/dark-mode/_variables.scss
+++ b/src/sass/dark-mode/_variables.scss
@@ -1,3 +1,7 @@
+// Scrollbars
+$scrollbar-color: transparent;
+$scrollbar-thumb-color: rgba(255, 255, 255, 0.2);
+
 $dark-mode-body-bg-color: $gray-900;
 $dark-mode-text-color: $gray-500;
 $dark-mode-secondary: $gray-800;
