Fix wiki code colors

--- a/src/sass/chameleon-wiki.scss
+++ b/src/sass/chameleon-wiki.scss
@@ -7,6 +7,7 @@
 @import "wiki/anchor";
 @import "wiki/catlinks";
 @import "wiki/cse-search-box";
+@import "wiki/code";
 @import "wiki/edit";
 @import "wiki/edit-section";
 @import "wiki/header";
