--- a/src/sass/wiki/_image.scss
+++ b/src/sass/wiki/_image.scss
@@ -1,11 +1,13 @@
 #content {
 	.tright,
 	.floatright {
+		float: right;
 		margin-left: 1em;
 	}
 
 	.tleft,
 	.floatleft {
+		float: left;
 		margin-right: 1em;
 	}
 
