--- a/src/sass/wiki/_image.scss
+++ b/src/sass/wiki/_image.scss
@@ -2,12 +2,14 @@
 	.tright,
 	.floatright {
 		float: right;
+		clear: right;
 		margin-left: 1em;
 	}
 
 	.tleft,
 	.floatleft {
 		float: left;
+		clear: left;
 		margin-right: 1em;
 	}
 
