--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -3,15 +3,15 @@ $black: #000000;
 $white: #ffffff;
 
 // Gray
-$gray-100: #fff8ee;
-$gray-200: #ede6dd;
-$gray-300: #dcd3cd;
-$gray-400: #cac1bc;
+$gray-100: #fffcf7;
+$gray-200: #fff8ee;
+$gray-300: #e7dfd8;
+$gray-400: #d0c7c1;
 $gray-500: #b8aeab;
-$gray-600: #968985;
-$gray-700: #746460;
-$gray-800: #523f3a;
-$gray-900: #301a14;
+$gray-600: #8b7d79;
+$gray-700: #5d4b46;
+$gray-800: #301a14;
+$gray-900: #180d0a;
 
 // Primary colors
 $green: #42cd42;
